# sigmod18contest

./: .gitmodules  CMakeLists.txt  README.md
include/: ArrayTable.h  BitsetTable.h  FilterOperator.h  JoinOperator.h  JoinUniqueOperator.h  MultiArrayTable.h  Operator.h  ProjectionOperator.h  Query.h  Relation.h  RelationalOperators.h  ScanOperator.h  SelfJoinOperator.h  SemiJoinOperator.h  pod_vector.h
src/: CMakeLists.txt  Query.cpp  Relation.cpp  equijoin.cpp  equijoin_unique.cpp  filter.cpp  main.cpp  semijoin.cpp
src/tests/: equijoin.cpp  equijoin_unique.cpp  filter.cpp  semijoin.cpp
workloads/: download.sh
